k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: varsha-portfolio-service
spec:
  selector:
    app: varsha-kandi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
